<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoTempControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="set_server">Enter server address!</string>
    <string name="set_api">Set API key string</string>
    <string name="button_continue">Continue</string>
    <string name="first_set_error">Enter info in all lines!</string>
    <string name="feed_id">ID:</string>
    <string name="fragment_settings_server">Server:</string>
    <string name="fragment_settings_api">ApiKey</string>
    <string name="fragment_settings_savereload">Save and Reload</string>
    <string name="no_internet">Data connection not available!</string>
    <string name="connection_problem">"Connection problem: "</string>
    <string name="stats_current_value">Current Value:</string>
    <string name="stat_save_button">Save</string>
    <string name="stat_referent_value">Set referent value:</string>
    <string name="stat_relay_onoff">Relay On/Off</string>
    <string name="value_set">Value set!</string>
    <string name="value_empty">Value cannot be empty!</string>
    <string name="between_0_100">Enter value between 0 and 100!</string>
    <string name="refresh">Refresh</string>
    <string name="please_wait">Please wait.</string>
    <string name="procesing_input">Processing inputs</string>
    <string name="procesing_feed">Processing feeds</string>
     <string name="procesing_stat_info" >Processing Statistic information</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
</resources>
