<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/fragment_settings_server"
        android:textSize="25dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_settings_server"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_api"
        android:textSize="25dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_settings_api"/>
    <Button
        android:id="@+id/fragment_settings_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_savereload"/>
        
</LinearLayout>