<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.wtfitio.arduinotempcontrol.arduinotempcontrol.Fragments.FirstLoginSet"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27dp"
        android:text="This is initial setup screen when you login for first time!"
        android:textAlignment="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_server"
        android:hint="@string/set_server"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_api"
        android:hint="@string/set_api"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_continue"
        android:text="@string/button_continue"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

</LinearLayout>